--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="https://ezjoane.github.io/UX_UI_HW_19/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
